<resources>
    <string name="app_name">OsoitaHotelBooking</string>
    <string name="sign_up">Sign up</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="click_here_to_login">Already have a account?Login</string>
    <string name="signup">SignUp</string>
    <string name="login">login</string>
    <string name="Email">email</string>
    <string name="Password">password</string>
    <string name="login_btn">login_btn</string>
    <string name="click_here_to_signup">Do not have an account?signup</string>
    <string name="Signup">signup</string>
    <string name="Login">Login</string>
    <string name="osoita_hotel">Osoita Hotel</string>
    <string name="room_1">room 1</string>
    <string name="room_4">room 4</string>
    <string name="room_3">room 3</string>
    <string name="room_2">room 2</string>
    <string name="room_6">room 6</string>
    <string name="room_7">room 7</string>
    <string name="room_8">room 8</string>
    <string name="room_9">room 9</string>
    <string name="room_10">room 10</string>
    <string name="room_5">room 5</string>
    <string name="item">Item</string>
    <string name="mapsApiKey">AIzaSyAbqax6gcXLQX9_Ia0vlqW8BGirwgFp8ZY</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="submit">Submit</string>
    <string name="booking">Booking</string>
    <string name="google_maps">Google Maps</string>
    <string name="lodge_rating">Lodge Rating</string>
    <string name="image">image</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="rating">Rating</string>
    <string name="profile">Profile</string>
    <string name="room_details">Fill the details Below</string>
    <string name="roomname">RoomName</string>
    <string name="room_name">Room name</string>
    <string name="checkin">CheckIn</string>
    <string name="checkin_date">checkIn date</string>
    <string name="checkout">checkOut</string>
    <string name="cost">Cost</string>
    <string name="checkout_date">checkout_date</string>
    <string name="room_number">Room Number</string>
    <string name="check_in_date">Check-In Date</string>
    <string name="check_out_date">Check-Out Date</string>
    <string name="amount">Amount: ksh%.2f</string>
    <string name="booking_status_booked">Booked</string>
    <string name="booking_status_available">Available</string>
    <string name="submitbtn">submit</string>
    <string name="room_Number">Room Number</string>
    <string name="checkIn_date">checkIn Date</string>
    <string name="checkOut_date">checkOut Date</string>
    <string name="roomnumber_label">roomnumber_label</string>
    <string name="check_in_date_label">checkindate</string>
    <string name="check_out_date_label">checkoutDate</string>
    <string name="amount_label">amount</string>
    <string name="room_number_label">Room Details</string>
    <string name="maps">map</string>
    <string name="cancelbooking">Cancel Booking</string>
    <string name="Location">locate</string>
    <string name="find_the_hotel">Find the Hotel!</string>
    <string name="Search">Search</string>
    <string name="Details">Room Details</string>
    <string name="rate_this_hotel">Rate this Hotel</string>
    <string name="submit_rate">Submit</string>
    <string name="average_rating">Rating</string>
    <string name="description">Your Security and comfort matters...</string>
    <string name="rated_stars">Rated : 4 Star</string>
    <string name="cancellation_failed">cancel_failed\n</string>
    <string name="cancellation_status_update_failed">failed_update</string>
    <string name="booking_cancelled">book_cancel</string>
    <string name="booking_successful">success_booking</string>
    <string name="room_status">Room status:</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="room_number_placeholder">hotelName</string>
    <string name="amount_placeholder">amount\n</string>
    <string name="room_already_booked">room_booked</string>
    <string name="fill_in_all_fields">fill</string>
    <string name="date_format">date</string>
    <string name="fetch_booking_status_failed">booking_status</string>
    <string name="status_booked">book_status</string>
    <string name="status_available">available</string>
    <string name="roomnumber">room number</string>
    <string name="username">username</string>
    <string name="roomnNumber">roomnumber</string>
</resources>