<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Room Number Label -->
    <TextView
        android:id="@+id/room_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_number"
        android:hint="@string/roomnNumber"
        android:textSize="18sp" />

    <!-- Room Number EditText -->
    <EditText
        android:id="@+id/roomNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="text"
        android:inputType="text"
        android:layout_marginBottom="16dp"
        android:importantForAccessibility="no" />

    <!-- PhoneNumber Number EditText -->
    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="text"
        android:inputType="phone"
        android:hint="Phone Number"
        android:layout_marginBottom="16dp"
        android:importantForAccessibility="no" />


    <!-- Check-In Date TextView -->
    <TextView
        android:id="@+id/check_in_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/check_in_date"
        android:padding="10dp"
        android:background="@android:drawable/editbox_background"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="8dp"
        android:focusableInTouchMode="false"
        android:importantForAccessibility="yes"
        android:minHeight="48dp"
        />

    <!-- Check-Out Date TextView -->
    <TextView
        android:id="@+id/check_out_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/check_out_date"
        android:padding="10dp"
        android:background="@android:drawable/editbox_background"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="8dp"
        android:focusableInTouchMode="false"
        android:importantForAccessibility="yes"
        android:minHeight="48dp"
       />


    <EditText
        android:id="@+id/amount_value"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:layout_marginBottom="16dp"
        android:importantForAccessibility="yes"
        android:autofillHints="decimal" />


    <!-- Booking Status TextView -->
    <TextView
        android:id="@+id/booking_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/room_status"
        android:textSize="18sp"
        android:layout_marginTop="16dp" />

    <!-- Confirm Button -->
    <Button
        android:id="@+id/confirm_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_booking"
        android:layout_marginTop="16dp"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/confirm_booking" />

    <!-- Cancel Button -->
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_booking"
        android:layout_marginTop="8dp"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/cancel_booking" />
</LinearLayout>
