<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_margin="20dp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginTextView"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="email"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textColorHint="#78909C"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:autofillHints="password"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:textColorHint="#78909C"
        android:textSize="30sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:text="@string/Login"
        android:textSize="30sp"
        android:layout_margin="60dp"
        android:onClick="handleLogin" />

    <TextView
        android:id="@+id/signupLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/click_here_to_signup" />
</RelativeLayout>