<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Rating">
        <TextView
            android:id="@+id/rate_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:gravity="center"
            android:text="@string/rate_this_hotel"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/Widget.AppCompat.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1.0"
            android:layout_gravity="center"
            android:layout_marginTop="20dp" />
        <TextView
            android:id="@+id/average_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/average_rating"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:visibility="gone" />
        <Button
            android:id="@+id/rate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_rate"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/rated_stars"
            android:textSize="20sp"
            android:textStyle="bold" />

</LinearLayout>
